--- a/.github/workflows/label-checker.yaml
+++ b/.github/workflows/label-checker.yaml
@@ -1,6 +1,11 @@
 name: Run Tests
 
-on: [push]
+on:
+  push:
+    branches:
+      - master
+  pull_request:
+    types: [ labeled ]
 
 jobs:
   mockoon-test:
