--- a/.github/workflows/label-checker.yaml
+++ b/.github/workflows/label-checker.yaml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   mockoon-test:
-    if: ${{ github.event.label.name == "mock-test" }}
+    if: ${{ github.event.label.name == 'mock-test' }}
     runs-on: ubuntu-latest
 
     steps:
