--- a/.github/workflows/label-checker.yaml
+++ b/.github/workflows/label-checker.yaml
@@ -18,6 +18,7 @@ jobs:
         run: echo "Hello World from mockoon"
 
   normal-test:
+    if: ${{ github.event.label.name != 'mock-test' }}
     runs-on: ubuntu-latest
 
     steps:
