--- a/.github/workflows/label-checker.yaml
+++ b/.github/workflows/label-checker.yaml
@@ -1,11 +1,6 @@
 name: Run Tests
 
-on:
-  push:
-    branches:
-      - master
-  pull_request:
-    types: [ labeled ]
+on: [ pull_request ]
 
 jobs:
   mockoon-test:
